@@ -18,6 +18,7 @@ Bug: Dropping first box on Heightfield is wrong.
 
 0.5.0 (unreleased)
 =====
+- DVector3C.cross(). [#115](https://github.com/tzaeschke/ode4j/pull/115)
 - DVector3.toDoubleArray(), fromDoubleArray(), fromFloatArray(). [#114](https://github.com/tzaeschke/ode4j/pull/114)
 - Turned into tests: DemoI, DemoSpace, DemoSpaceStress. [#110](https://github.com/tzaeschke/ode4j/pull/110)
 - Remove or deprecate `Cloneable` and `clone()`. [#109](https://github.com/tzaeschke/ode4j/pull/109)
